# pure3d

./: .gitignore  Dockerfile  LICENSE  README.md  __init__.py  build.sh  docker-compose-acc.yml  docker-compose-portainer.yml  docker-compose.yml  howto-build.md  mkdocs.yml  pyproject.toml  requirements.txt  restart.sh  start.sh
Experiments/Flask-Mongo/: .env
Experiments/Flask-Mongo/templates/: index.html  searchlist.html  update.html
Flask-Mongo/: .flaskenv  app.py  index.html  requirements.txt  searchlist.html  style.css  update.html
Website/: app.py  app.py.orig  requirements.txt
Website/data/editions/2/: name.txt
Website/editions/1/: about.md  name.txt
Website/static/assets/: style.css
Website/templates/: about.html  edition.html  index.html  layout.html
data/: rename.sh  upgrade.sh
data/editions/1/: about.md
data/editions/6/: name.txt
data/projects/: audio.sh  install.sh  photos.sh
data/texts/: about.md  intro.md
docs/: index.md
docs/15SeptMeeting/Website-organisation/: organisation.md
docs/15SeptMeeting/metadata/: edition.md  object.md
docs/15SeptMeeting/metdata/: edition.md  project.md
docs/2022-09-15 Meeting/: .$voyagertalking.png.bkp  .$voyagertalking.png.dtmp  DigitalScholarlyProjects.md  sandbox2server.md
docs/2022-09-15 Meeting/metadata/: edition.md  object.md
docs/Meetings/2022-09-15 Meeting/: .$voyagerserving.png.bkp  .$voyagertalking.drawio.png.bkp  .$voyagertalking.png.bkp  sandbox2server.md
docs/architecture/: AIP.md  DIP.md  DigitalScholarlyEditions.md  SIP.md  TechMeetingDANS.md  TechMeetingDANS.md.md  WholePicture.md
docs/architecture/attachments/: .$WorkspaceLayout.png.bkp  .$wholepicture2022-05-30.png.bkp
docs/pilots/: roundtrip.md  voyager.md
docs/roadmap/: 2022-09-19.md
docs/solutions/: WebDav.md
docs/steps/DIP/: Outline of development.md  README.md.md
legacy/Experiments/Flask-Mongo/: app.py  requirements.txt
pilots/chaining/: app.py  app2.py
pilots/chaining/templates/: index.html  layout.html
pilots/chainingstraight/: app1.py
pilots/data/3d/: clanwilliam.json  clanwilliam.yaml
pilots/data/3dsav/: clanwilliam.json  clanwilliam.yaml
pilots/dip/helpers/: files.py
pilots/dip/templates/: layout.html  projectList.html
pilots/flaskvoyager/: app.py
pilots/flaskvoyager/templates/: dip.html  index.html  layout.html  sip.html
pilots/static/css/: base.css
pilots/voyager-explorer/: app.py
pilots/voyager-explorer/templates/: index.html  voyager.html
pilots/voyager-roundtrip/: app.py  dispatcher.py  webdavapp.py
pilots/voyager-roundtrip/templates/: index.html  layout.html  voyager.html
pilots/voyager-story/: app.py  webdavapp.py
pilots/voyager-story-attempt1/: app.py  webdavapp.py
pilots/voyager-story-attempt1/templates/: voyager.html
pilots/voyager-story-straight/: cmd.sh  url.txt
pilots/voyager-story/templates/: index.html  voyager.html
pilots/voyager-story/traces/: propfind.xml
pilots/webdav/: app.py  cmd.sh
programs/: install.sh  serve.sh
projectsCopy/1/texts/: description.md
projectsCopy/2/meta/: dc.json
projectsCopy/2/texts/: about.md
scripts/: browser.py  dip.sh  install.sh  mywebbrowser.py  package-lock.json  pilot.sh  pure3d.sh  rename.sh  serve.sh  upgrade.sh
src/: data.sh  ship.sh  start.sh  test.py  version.txt
src/dip/: about.md  app.py  form.py  requirements.txt  test.py
src/dip/helpers/: generic.py  messages.py
src/dip/templates/: about.html  addMetadata.html  editMetadata.html  edition.html  editionTexts.html  index.html  layout.html  model.html  project.html  projectTexts.html  voyager.html
src/pure3d/: about.md  app.py  authorise.py  dublincore.py  projects.py  requirements.txt  settings.py  users.py
src/pure3d/control/: app.py  authorise.py  dublincore.py  pages.py  projects.py  settings.py  users.py  viewers.py
src/pure3d/helpers/: generic.py  messages.py
src/pure3d/templates/: index.html  layout.html  project.html
src/pure3dtools/: LICENSE.txt  checkrefs.py  generate.sh  jyconvert.py  mdHtml.py
src/tools/: README.md  generate.sh  jyconvert.py
tools/: generate.sh  jyconvert.py  mdHtml.py
tools/jyconvert/: LICENSE.txt  README.md  pyproject.toml
tools/jyconvert/jyconvert/: __about__.py  jyconvert.py
tools/jyconvert/tests/: __init__.py
tools/mdtohtml/: convert-md-to-html.py
yaml/: authorise.yaml  projectstatus.yaml
(+296 files in other folders)
