[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pure3dtools"
description = 'Pure3D tools'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "sohinimallick16", email = "sohini.mallick@maastrichtuniversity.nl" },
  { name = "dirkroorda", email = "dirk.roorda@di.huc.knaw.nl" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pyyaml", "markdownify", "markdown", "flask", "wsgidav", "cheroot"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/CLARIAH/pure3d/README.md"
Issues = "https://github.com/CLARIAH/pure3d/issues"
Source = "https://github.com/CLARIAH/pure3d/tree/master/src/pure3dtools"

[project.scripts]
jyconvert = "pure3dtools.jyconvert:main"
mdhtml = "pure3dtools.mdHtml:main"

[tool.hatch.version]
path = "src/pure3dtools/VERSION"

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]
